Fix scrollbar on @Abhishek-dab

--- a/public/Buttons/Abhishek-dab/style.css
+++ b/public/Buttons/Abhishek-dab/style.css
@@ -2,26 +2,26 @@ body {
 	background: #e30a0a;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 	color: #e91c1c;
-  }
-  
-  .center {
+}
+
+.center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100vh;
+	height: 90vh;
 	font-size: 24px;
-  }
-  
-  .btn-1 {
+}
+
+.btn-1 {
 	width: 300px;
 	height: 200px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-  }
-  
-  .btn-1 a {
+}
+
+.btn-1 a {
 	text-decoration: none;
 	border: 2px solid #010100;
 	padding: 15px;
@@ -30,14 +30,14 @@ body {
 	letter-spacing: 2px;
 	position: relative;
 	display: inline-block;
-  }
-  
-  span {
+}
+
+span {
 	position: relative;
 	z-index: 3;
-  }
-  
-  .btn-1 a::before {
+}
+
+.btn-1 a::before {
 	content: "";
 	position: absolute;
 	top: 5px;
@@ -47,13 +47,13 @@ body {
 	background-color: #ffffff;
 	transition: all 0.5s ease-in-out;
 	transform: scaleY(1);
-  }
-  
-  .btn-1 a:hover::before {
+}
+
+.btn-1 a:hover::before {
 	transform: scaleY(0);
-  }
-  
-  .btn-1 a::after {
+}
+
+.btn-1 a::after {
 	content: "";
 	position: absolute;
 	left: 5px;
@@ -63,9 +63,8 @@ body {
 	background-color: #ffffff;
 	transition: all 0.5s ease-in-out;
 	transform: scaleX(1);
-  }
-  
-  .btn-1 a:hover::after {
+}
+
+.btn-1 a:hover::after {
 	transform: scaleX(0);
-  }
-  
+}
